tests/negative/gold/type-no-force-test.gold
tests/negative/type-no-force-test.toit:8:7: error: Type mismatch. Expected 'int'. Got 'string'
  foo "str"
      ^~~~~
Compilation failed
